Fixes more spacing (#47)

--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     padding: 0 32px;
-    margin-bottom: 64px;
+    margin-bottom: 60px;
   }
 
   .team-container {
